Fix a couple issues on Safari/iOS

--- a/wp-content/themes/twentythirteen-child/assets/style/global/work.less
+++ b/wp-content/themes/twentythirteen-child/assets/style/global/work.less
@@ -189,6 +189,7 @@
 	width: 100%;
 	margin: 30px 5px 30px 5px;
 	cursor: pointer;
+	text-align: center;
 }
 
 .archive_btn {
